--- a/index.html
+++ b/index.html
@@ -1,28 +1,23 @@
 <!DOCTYPE html>
 <html lang="ru">
-
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="x-ua-compatible" content="ie=edge" />
-  <title>Medisi sound</title>
+  <title>Modal example</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   <link rel="stylesheet" href="css/modal.css">
 </head>
-
 <body>
   <div class="container">
-    <h1>Medisi Player</h1>
-
+    <h1>Modal example</h1>
     <div class="card-deck" id="fruits"></div>
-
   </div>
-
   <script src="base.js"></script>
   <script src="plugins/modal.js"></script>
   <script src="plugins/confirm.js"></script>
   <script src="modalBody.js"></script>
-</body>
+</body> 
 
 </html>
