--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
 <body>
   <div class="container">
     <h1>Modal example</h1>
+    <!-- // html разметка будет сгенерирована в index.js -->
     <div class="card-deck" id="fruits"></div>
   </div>
   <script src="base.js"></script>
   <script src="plugins/modal.js"></script>
   <script src="plugins/confirm.js"></script>
-  <script src="modalBody.js"></script>
+  <script src="index.js"></script>
 </body> 
 
 </html>
