--- a/index.html
+++ b/index.html
@@ -3,31 +3,94 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Medisi</title> 
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-    integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/modal.css">
+  <title>Medisi</title>
+  <link rel="stylesheet" href="css/index.css">
 </head>
 
 <body>
-  <div class="container">
-    
-    <!-- // html разметка будет сгенерирована в index.js -->
-    <div class="card-deck" id="header"></div>
-  
-    <button>Ваши подписки</button>
+  <div class="app">
+    <div class="app-container">
+      <!-- Хедер -->
+      <div class="header">
+        <div class="header-box">
+          <div class="header-box-logo" \></div>
+          <div class="header-box-name">MediSi</div>
+        </div>
+      </div>
+      <!-- Карусель медитаций -->
+      <div class="header-carousel">
 
-    <div class="card-deck" id="promo"></div>
-    <h1>MediSi</h1>
-    <p>Медитация - это путь к новым горизонтам вашего сознания
-    </p>
-    <h2>Footer</h2>
-    
-  <script src="base.js"></script>
-  <script src="plugins/headerModal.js"></script>
+        <div class="header-carousel-card">
+
+          <div class="header-carousel-card-item">
+            <div class="header-carousel-card-item-image" style="background-image: URL(images/sleep.jpg)"></div>
+            <div class="header-carousel-card-item-title" >Сон</div>
+          </div>
+
+
+          <div class="header-carousel-card-item">
+            <div class="header-carousel-card-item-image" style="background-image: URL(images/health.jpg)"></div>
+            <div class="header-carousel-card-item-title">Здоровье</div>
+          </div>
+
+
+          <div class="header-carousel-card-item">
+            <div class="header-carousel-card-item-image" style="background-image: URL(images/abundance.jpg)"></div>
+            <div class="header-carousel-card-item-title">Изобилие</div>
+          </div>
+
+
+          <div class="header-carousel-card-item">
+            <div class="header-carousel-card-item-image" style="background-image: URL(images/relationships.jpg)"></div>
+            <div class="header-carousel-card-item-title">Отношения</div>
+          </div>
+
+        </div>
+
+      </div>
+      <!-- Кнопка -->
+      <div class="button">ВАШИ ПОПИСКИ</div>
+      <!-- Карусель коллекций -->
+      <div class="promo-carousel">
+        <div class="promo-carousel-card">
+          <div class="promo-carousel-card-descriptions">Сборник медитаций про отношения</div>
+        </div>
+      </div>
+      <div class="promo-carousel">
+        <div class="promo-carousel-card">
+          <div class="promo-carousel-card-descriptions">Сборник медитаций про изобилие</div>
+        </div>
+      </div>
+      <div class="promo-carousel">
+        <div class="promo-carousel-card">
+          <div class="promo-carousel-card-descriptions">Сборник медитаций про здоровье</div>
+        </div>
+      </div>
+      <div class="promo-carousel">
+        <div class="promo-carousel-card">
+          <div class="promo-carousel-card-descriptions">Сборник медитаций для расслаблений</div>
+        </div>
+      </div>
+      <h1>MediSi</h1>
+      <p>Медитация - это путь к новым горизонтам вашего сознания</p>
+      <div id="share"></div>
+      <div id="pwaInstall"></div>
+      <!-- Футер -->
+      <div class="footer"></div>
+      <div class="footer-name">MediSi</div>
+      <div class="footer-pwa">
+        <div class="class=footer-pwa-brand-item"></div>
+        <div class="class=footer-pwa-brand-item"></div>
+        <div class="class=footer-pwa-brand-item"></div>
+        <div class="class=footer-pwa-brand-item"></div>
+      </div>
+      <div class="class=footer-sweety">SWEETY 2021</div>
+    </div>
+  </div>
+  <!-- <div class="card-deck" id="promo"></div> -->
+  <script src="plugins/base.js"></script>
   <script src="plugins/promoModal.js"></script>
-  <script src="header.js"></script>
-  <script src="promo.js"></script>
+  <script src="plugins/promo.js"></script>
 </body>
 
 </html>
