--- a/player4.html
+++ b/player4.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="user-scalable=no">
     <title>MediSi</title>
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
 
@@ -38,6 +38,9 @@
     <div id="list"></div>
 </div>
 
+<!-- Close -->
+<div onclick="location.href='./index.html';" class="close">&times;</div>
+
 <!-- Volume -->
 <div id="volume" class="fadeout">
     <div id="barFull" class="bar"></div>
@@ -46,8 +49,8 @@
 </div>
 
 <!-- Scripts -->
-<script src="./core.js"></script>
-<script src="./siriwave.js"></script>
-<script src="./player.js"></script>
+<script src="./plugins/core.js"></script>
+<script src="./plugins/siriwave.js"></script>
+<script src="./plugins/player4.js"></script>
 </body>
 </html>
