fix audio names

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="carousel-card-item-image" style="background-image: URL(images/sleep.jpg)"></div>
             <div class="carousel-card-item-title">Сон</div>
           </div>
-          <div class="carousel-card-item" onclick="location.href='./player1.htm2';">
+          <div class="carousel-card-item" onclick="location.href='./player2.html';">
             <div class="carousel-card-item-image" style="background-image: URL(images/health.jpg)"></div>
             <div class="carousel-card-item-title">Здоровье</div>
           </div>
