--- a/player3.html
+++ b/player3.html
@@ -2,19 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="user-scalable=no">
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
     <title>MediSi</title>
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
 
 <!-- Top Info -->
-<div id="title">
-    <span id="track"></span>
+<div class="player-title-box">
+    <div id="title">
+        <span id="track"></span>
+    </div>
     <div id="timer">0:00</div>
     <div id="duration">0:00</div>
 </div>
-
 <!-- Controls -->
 <div class="controlsOuter">
     <div class="controlsInner">
