--- a/frontend_1/player1.html
+++ b/frontend_1/player1.html
@@ -57,6 +57,12 @@
     <div onclick="location.href='./index.html';" class="close">&times;</div>
 
     <!-- Scripts -->
+    <script type="module">
+        import 'https://cdn.jsdelivr.net/npm/@pwabuilder/pwaupdate';
+
+        const el = document.createElement('pwa-update');
+        document.body.appendChild(el);
+    </script>
     <script src="./plugins/core.js"></script>
     <script src="./plugins/siriwave.js"></script>
     <script src="./plugins/player1.js"></script>
