--- a/frontend_1/index.html
+++ b/frontend_1/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
+  <link rel='manifest' href='/manifest.json'>
   <link rel="icon" href="favicon.ico" />
   <title>Medisi</title>
   <meta name="description"
@@ -434,6 +435,12 @@
     </div>
   </div>
   <!-- <div class="card-deck" id="promo"></div> -->
+  <script type="module">
+    import 'https://cdn.jsdelivr.net/npm/@pwabuilder/pwaupdate';
+
+    const el = document.createElement('pwa-update');
+    document.body.appendChild(el);
+  </script>
   <script src="plugins/base.js"></script>
   <script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
   <script>
