--- a/frontend_1/index.html
+++ b/frontend_1/index.html
@@ -5,7 +5,6 @@
     <title>Medisi</title>
 <meta name="description" content="Приложение для медитаций">
 
-<link href="a2hs/addtohomescreen.css" rel="stylesheet">
 
 <meta name="mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-capable" content="yes">
@@ -750,7 +749,7 @@
 
         </div>
     </div>
-    <script src="a2hs/addtohomescreen.js"></script>
+    <!-- <script src="a2hs/addtohomescreen.js"></script>
     <script>
         addToHomescreen( {
             appID: "one.medisi",
@@ -768,7 +767,7 @@
                 installMsg: "Установить"
             }
         } );
-    </script>
+    </script> -->
     <script>
         if ( "serviceWorker" in navigator ) {
 
