--- a/frontend_1/index.html
+++ b/frontend_1/index.html
@@ -622,8 +622,8 @@
           </div>
         </div>
       </div>
-    
-      <script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
+      <script type="module" src="https://unpkg.com/ionicons@5.0.0/dist/ionicons/ionicons.esm.js"></script>
+      <!-- <script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script> -->
       <script>
         const host = "https://medisi.one";
         if (localStorage.getItem('_token')) {
