pwa test v3.1.1 Тестируется баг с отсутствием времени трека. Временно отключа. pwa

--- a/frontend_1/index.html
+++ b/frontend_1/index.html
@@ -52,7 +52,7 @@
 
   <meta name="theme-color" content="#000000">
 
-  <link rel="manifest" href="manifest.json">
+  <!-- <link rel="manifest" href="manifest.json"> -->
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
     integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
@@ -619,8 +619,7 @@
       </div> 
     </div>
   </div>
-  <script src="app.js"></script>
-  <script src="plugins/base.js"></script> 
+  <!-- <script src="app.js"></script> -->
   <script type="module" src="https://unpkg.com/ionicons@5.0.0/dist/ionicons/ionicons.esm.js"></script>
 
   <script>
