pwa test v3.1.2 без pwa ios стабилен

--- a/frontend_1/404.html
+++ b/frontend_1/404.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/index.css">
-    <title>Medisi offline error</title>
-    <meta name="description" content="MediSi осталось без интернета ...">
+    <title>Medisi 404 error</title>
+    <meta name="description" content="MediSi не может найти такую страницу ...">
     <meta name="msapplication-starturl" content="https://medisi.one/">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="favicon.png" rel="shortcut icon">
@@ -31,7 +31,7 @@
           </div>
           <br/><br/><br/><br/>
           <h1 style="color: red">Medisi</h1>
-          <p style="color: red"><b>УПС... А интернета нет((((</b></p>
+          <p style="color: red"><b>УПС... Нет такой страницы. Лучше вернитесь назад или нажмите ссылку ниже.</b></p>
           
           <div class="box-button-subscriptions">
             <a href="index.html" >ОБНОВИТЬ</a>
