pwa test v3.2.5 added mac text in botton

--- a/frontend_1/index.html
+++ b/frontend_1/index.html
@@ -161,7 +161,7 @@
         <a href="#header" class="popup-close">
           <ion-icon size="large" name="close-circle-outline"></ion-icon>
         </a>
-        <h3>УСТАНОВИТЕ ПРИЛОЖЕНИЕ НА СВОЙ <b>WINDOWS КОМПЬЮТЕР</b>, ЧТОБЫ ПОЛУЧИТЬ ДОСТУП К ПОЛНОЙ КОЛЛЕКЦИИ</h3>
+        <h3>УСТАНОВИТЕ ПРИЛОЖЕНИЕ НА СВОЙ <b>WINDOWS или MAC КОМПЬЮТЕР</b>, ЧТОБЫ ПОЛУЧИТЬ ДОСТУП К ПОЛНОЙ КОЛЛЕКЦИИ</h3>
 
         <p style="margin: 0px; padding: 0; font-size: 18px; font-weight: 600; text-align: left;">ШАГ 1: СКОПИРУЙТЕ ЭТУ ССЫЛКУ</p>
         <div readonly class="js-copy-target">https://www.medisi.one/pagesfordevices/windows/</div>
