--- a/frontend_1/pagesfordevices/android/index.html
+++ b/frontend_1/pagesfordevices/android/index.html
@@ -58,6 +58,8 @@
     integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
     crossorigin="anonymous">
     </script>
+    <script type="module" src="https://cdn.jsdelivr.net/npm/@pwabuilder/pwainstall@latest/dist/pwa-install.min.js"></script>
+  
 </head>
 
 <body>
@@ -622,7 +624,11 @@
     </div>
   </div>
   <script src="app.js"></script>
-  <script type="module" src="https://cdn.jsdelivr.net/npm/@pwabuilder/pwainstall@latest/dist/pwa-install.min.js"></script>
+  <script async defer>
+    var installComponent = document.createElement("pwa-install");
+    document.body.appendChild(installComponent);
+    installComponent.getInstalledStatus();
+  </script>
   <script type="module" src="https://unpkg.com/ionicons@5.0.0/dist/ionicons/ionicons.esm.js"></script>
 
   <script>
